# luxel

./: .gitignore  AGENTS.md  CONTEXT-MAP.md  CONTEXT.md  Cargo.toml  README.md  bunfig.toml  package.json  playwright.config.ts  playwright.webgpu.config.ts  pnpm-lock.yaml
.github/workflows/: ci.yml
.scratch/prototype-m0-m1/: PRD.md
crates/luxel-core/: Cargo.toml
crates/luxel-core/src/: counter.rs  lib.rs  render_ir.rs  spiral.rs
docs/: architecture.md  auth-adapters.md  deploy-matrix.md  plugin-sandbox.md  prototype-slice.md  roadmap-v1-exit.md  stability-matrix.md  threat-model.md  toolchain-host.md
docs/adr/: 0001-resource-store-phase-1.md  0002-response-compression.md  0003-multi-runtime-deploy.md  0004-compiler-server-deepening.md  0005-luxel-core-phased-rollout.md  0006-bench-perf-priority-and-competitor-peak.md  0007-luxel-native-runtime-mode.md
docs/agents/: domain.md
docs/benchmarks/: boundary-bench.md  fairness.md  native-default-enablement.md  scorecard.md  ssr-showdown.md  stacks.md  winrk.md
docs/prd/: luxel-architecture-roadmap-v1.md  phase-0-bench-gate-exit.md  phase-0-compiled-ssr.md  phase-b-multi-runtime-deploy.md  post-prototype-resource-store.md  prototype-slice-delivered.md
docs/prd/issues/: slice-01-phase1-server.md  (+20 more)
examples/counter/: CONTEXT.md  package.json
examples/docs-site/: package.json
examples/nav-demo/: CONTEXT.md  luxel.config.ts  package.json
examples/spiral/: luxel.config.ts  package.json
tests/e2e/: counter.spec.ts  nav-demo.spec.ts  spiral-webgpu.spec.ts  webgpu-global-setup.ts  webgpu-preflight.ts
(+15 files in other folders)
